--- a/main.css
+++ b/main.css
@@ -9,3 +9,15 @@
 .item {
   position: absolute;
 }
+
+#shopping-cart {
+  position: absolute;
+
+  top: 80%;
+  left: 45%;
+}
+
+#shopping-cart img {
+  height: 75px;
+  width: 75px;
+}
