--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 #shopping-floor{
-  width: 600px;
-  height: 450px;
+  /*width: 600px;
+  height: 450px;*/
   border: solid 2px black;
   position: relative;
   overflow: hidden;
